fixed alignmnet

--- a/static/css/core.css
+++ b/static/css/core.css
@@ -120,7 +120,9 @@ html, body{
 }
 
 .logo img {
-    width: 100px;
+    margin-top: 12px;
+    margin-bottom: -8px;
+    width: 120px;
 }
 
 #errorPage {
@@ -407,4 +409,3 @@ input#submit{
 .quizLink > a{
 	color: rgb(169,3,41);
 }
-
